// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`confirmation Renders \`confirmation\` with empty modal 1`] = `
<modal-wrapper-stub
  close="true"
  titlecolor="var(--v-primary-base)"
>
  <span>
    Are you sure?
  </span>
  <div
    class="layout wrap justify-center"
  >
    <button
      class="v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default error"
      type="button"
    >
      <span
        class="v-btn__content"
      >
        No
      </span>
    </button>
    <button
      class="ml-2 v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary"
      type="button"
    >
      <span
        class="v-btn__content"
      >
        Yes
      </span>
    </button>
  </div>
</modal-wrapper-stub>
`;

exports[`confirmation Renders \`confirmation\` with hidden title 1`] = `
<modal-wrapper-stub
  close="true"
  titlecolor="var(--v-primary-base)"
>
  <span
    class="text-subtitle-1 pre-wrap"
  >
    Confirmation text
  </span>
  <div
    class="layout wrap justify-center"
  >
    <button
      class="v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default error"
      type="button"
    >
      <span
        class="v-btn__content"
      >
        No
      </span>
    </button>
    <button
      class="ml-2 v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary"
      type="button"
    >
      <span
        class="v-btn__content"
      >
        Yes
      </span>
    </button>
  </div>
</modal-wrapper-stub>
`;

exports[`confirmation Renders \`confirmation\` with text, title and actions 1`] = `
<modal-wrapper-stub
  close="true"
  titlecolor="var(--v-primary-base)"
>
  <span>
    Confirmation title
  </span>
  <span
    class="text-subtitle-1 pre-wrap"
  >
    Confirmation text
  </span>
  <div
    class="layout wrap justify-center"
  >
    <button
      class="v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default error"
      type="button"
    >
      <span
        class="v-btn__content"
      >
        No
      </span>
    </button>
    <button
      class="ml-2 v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary"
      type="button"
    >
      <span
        class="v-btn__content"
      >
        Yes
      </span>
    </button>
  </div>
</modal-wrapper-stub>
`;
